New Paragraph and Emojis

--- a/PWA_From_Scratch/index.html
+++ b/PWA_From_Scratch/index.html
@@ -11,8 +11,13 @@
       <h2>A common string of emojis I use in a response when things go wrong</h2>
       <p>Don't worry. It's an inside joke.</p>
 
+      <p>Adding This LIne</p>
+
       <!--Emoji's-->
       &#128557; &#129314; &#129326;
+
+      <!--New Emoji's. May not work-->
+      &#121556; &#129335; &#129365;
 
       <!--Bonus Content-->
       <h1>Can you solve the cryptogram?</h1>
