--- a/PWA_From_Scratch/index.html
+++ b/PWA_From_Scratch/index.html
@@ -12,6 +12,7 @@
       <p>Don't worry. It's an inside joke.</p>
 
       <p>Adding This LIne</p>
+      <p>work</p>
 
       <!--Emoji's-->
       &#128557; &#129314; &#129326;
